# urlq

./: Cargo.toml  README.md
.github/workflows/: CI.yml
src/: imp.rs  main.rs
tests/: integration.rs
tests/cases/01/: stdin.txt  stdout.txt
tests/cases/02/: stdout.txt
tests/cases/03/: stdout.txt
tests/cases/05/: stdout.txt
tests/cases/06/: stdout.txt
tests/cases/08/: stdout.txt
tests/cases/09/: stderr.txt  stdin.txt
tests/cases/10/: stdout.txt
tests/cases/12/: stderr.txt
