[package]
name = "urlq"
version = "0.1.0"
edition = "2021"
authors = ["jRimbault <jacques.rimbault@gmail.com>"]

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.2", features = ["derive"] }
indexmap = { version = "1.9.3", features = ["serde"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
url = { version = "2.3.1", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2.0.11"
predicates = "3.0.3"
rstest = "0.17.0"
tap = "1.0.1"
